--- a/authServer/package.json
+++ b/authServer/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -11,5 +11,8 @@
   "description": "",
   "dependencies": {
     "googleapis": "^144.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
