--- a/authServer/serverless.yml
+++ b/authServer/serverless.yml
@@ -17,3 +17,20 @@ functions:
       - http:
           path: api/get-auth-url
           method: get
+          cors: true
+
+  getAccessToken:
+    handler: handler.getAccessToken
+    events:
+      - http:
+          path: api/get-access-token
+          method: post
+          cors: true
+
+  getCalendarEvents:
+    handler: handler.getCalendarEvents
+    events:
+      - http:
+          path: api/get-events/{access_token}
+          method: get
+          cors: true
