--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -36,6 +37,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "vite": "^6.0.5"
+    "vite": "^6.0.7"
   }
 }
