--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "googleapis": "^144.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-cucumber": "^4.5.0",
     "jest-environment-jsdom": "^29.7.0",
+    "puppeteer": "^18.1.0",
     "vite": "^6.0.7"
   }
 }
