--- a/authServer/package.json
+++ b/authServer/package.json
@@ -2,6 +2,7 @@
   "name": "authserver",
   "version": "1.0.0",
   "main": "handler.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
