--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
+
+env.local
 
 # Editor directories and files
 .vscode/*
@@ -26,3 +27,4 @@ dist-ssr
 notes.txt
 
 /staticSiteTest
+*.local
