--- a/authServer/serverless.yml
+++ b/authServer/serverless.yml
@@ -20,7 +20,13 @@ functions:
       - http:
           path: api/get-auth-url
           method: get
-          cors: true
+          cors:
+            origins:
+              - http://localhost:3000
+              - https://circle-up-brown.vercel.app
+            headers:
+              - Content-Type
+              - Authorization
 
   getAccessToken:
     handler: handler.getAccessToken
@@ -37,6 +43,7 @@ functions:
           path: api/get-events/{access_token}
           method: get
           cors: true
+
   revoke:
     handler: authServer/revoke.revoke
     events:
