--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "atatus-spa": "^4.6.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "path-browserify": "^1.0.1",
