--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "recharts": "^2.15.1",
     "vite-plugin-pwa": "^0.21.1",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
